# ucompleter

./: .gitmodules  Cargo.toml  LICENSE  README.md  dumper.yaml
.cargo/: config.toml
.github/workflows/: build_and_test.yml
deprecated/: dumper.rs
python/: ucompleter.py  ucompleter_cli.py
src/: get_description.rs  get_metadata.rs  lib.rs  strwriter.rs  unittests.rs  write_completions.rs  yaml_descent.rs
