# 
# SPDX-License-Identifier: MIT
# 
# Copyright (c) 2025 Andrew Ellis Page
# 
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
# 
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
# 
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.
# 
[package]
name = "ucompleter"
version = "1.0.0"
edition = "2024"
license-file = "LICENSE"
description = "tool for providing command line completions from config files"


[workspace]
members = [".", "aep_rust_common"]

[dependencies]
yaml-rust = "0.4.5"
regex = "1.11.1"
clap = "4.5.40"
aep_rust_common = { path = "aep_rust_common" }

[package.metadata.deb]
copyright = "© copyright Andrew Ellis Page"
extended-description-file= "README.md"
section = "Utilities"
